WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130426
[WebRTC] Fix layering violation in RTCStatsRequest
https://bugs.webkit.org/show_bug.cgi?id=130426
Summary
[WebRTC] Fix layering violation in RTCStatsRequest
Thiago de Barros Lacerda
Reported
2014-03-18 15:00:49 PDT
RTCStatsRequest::track() should return a MediaStreamTrackPrivate.
Attachments
Patch
(11.20 KB, patch)
2014-03-18 15:32 PDT
,
Thiago de Barros Lacerda
no flags
Details
Formatted Diff
Diff
Patch
(6.67 KB, patch)
2014-03-18 16:46 PDT
,
Thiago de Barros Lacerda
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Thiago de Barros Lacerda
Comment 1
2014-03-18 15:32:25 PDT
Created
attachment 227120
[details]
Patch
Thiago de Barros Lacerda
Comment 2
2014-03-18 16:46:05 PDT
Created
attachment 227129
[details]
Patch
WebKit Commit Bot
Comment 3
2014-03-18 17:28:56 PDT
Comment on
attachment 227129
[details]
Patch Clearing flags on attachment: 227129 Committed
r165858
: <
http://trac.webkit.org/changeset/165858
>
WebKit Commit Bot
Comment 4
2014-03-18 17:28:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug